--- a/css/reset.css
+++ b/css/reset.css
@@ -39,10 +39,10 @@ ul {
   right: 0; */
   width: 100%;
   height: 100%;
-  background-color: #aaa;
+  background-color: #０００;
+  
   animation: fadeout 1.5s ease-in 1.5s;
   animation-fill-mode: forwards;
-  z-index: 1000;
 }
 #testAppeal {
   text-align: center;
