--- a/css/reset.css
+++ b/css/reset.css
@@ -40,7 +40,7 @@ ul {
   width: 100%;
   height: 100%;
   background-color: #０００;
-  
+  color: #fff;
   animation: fadeout 1.5s ease-in 1.5s;
   animation-fill-mode: forwards;
 }
